--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/app.css">
+
+
 </head>
 <body>
   <app-root></app-root>
 
+  <script src="assets/js/jquery-3.2.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+
   <script src="assets/js/vendor/algorithmia-0.2.0.js"></script>
+
+  <script src="assets/js/chart.min.js"></script>
+  <script src="assets/js/chart-data.js"></script>
+  <script src="assets/js/easypiechart.js"></script>
+  <script src="assets/js/easypiechart-data.js"></script>
+  <script src="assets/js/bootstrap-datepicker.js"></script>
+
+  <script>
+    window.onload = function () {
+      var chart1 = document.getElementById("line-chart").getContext("2d");
+      window.myLine = new Chart(chart1).Line(lineChartData, {
+        responsive: true,
+        scaleLineColor: "rgba(0,0,0,.2)",
+        scaleGridLineColor: "rgba(0,0,0,.05)",
+        scaleFontColor: "#c5c7cc"
+      });
+    };
+  </script>
+
 </body>
 </html>
